fix: change some posts and blogs

--- a/compose.yaml
+++ b/compose.yaml
@@ -8,11 +8,11 @@ services:
         build: backend/
         environment:
             - PORT=3001
-            - DATABASE_URL=mongodb://blog-database:27017/blog
+            - DATABASE_URL=mongodb://recipe-database:27017/recipe-list
         ports:
             - "3001:3001"
         depends_on:
-            - blog-database
+            - recipe-list-database
     blog-frontend:
         build:
             context: .
@@ -21,4 +21,4 @@ services:
         ports:
             - "3000:80"
         depends_on:
-            - blog-backend
+            - recipe-list-backend
