--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "lint": "eslint src",
-    "prepare": "husky install"
+    "lint": "eslint src"
   },
+
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
