--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,6 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "eslint src"
   },
-
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -23,7 +22,8 @@
     "mongoose": "^8.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
